# localstack-example

./: .env.local  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
src/lambdas/api_endpoints/: contracts.py  handler.py  requirements.txt  settings.py
src/lambdas/api_endpoints/repository/: customer.py  document.py
src/lambdas/store_input_to_bucket/: contracts.py  handler.py  repository.py  requirements.txt  settings.py
src/migrations/: v0.py  yoyo.ini
